--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vendor/durendal"]
 	path = vendor/durendal
 	url = https://github.com/technomancy/durendal.git
+[submodule "vendor/autopair"]
+	path = vendor/autopair
+	url = https://github.com/emacsmirror/autopair.git
